[project]
name = "climate-change"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.19.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "reverse-geocoder>=1.5.1",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
]
